--- a/index.html
+++ b/index.html
@@ -1,80 +1,72 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-    /* set the CSS */
-
-    .bar {
-        fill: steelblue;
-    }
-</style>
 
 <body onload='init()'>
 
-    <!-- load the d3.js library -->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <!-- Load d3.js -->
+    <script src="https://d3js.org/d3.v5.js"></script>
+
+    <!-- Create a div where the graph will take place -->
+    <div id="my_dataviz"></div>
     <script>
+
         async function init() {
-
             // set the dimensions and margins of the graph
-            var margin = { top: 20, right: 20, bottom: 30, left: 40 },
-                width = 960 - margin.left - margin.right,
-                height = 500 - margin.top - margin.bottom;
-
-            // set the ranges
-            var x = d3.scaleBand()
-                .range([0, width])
-                .padding(0.1);
-            var y = d3.scaleLinear()
-                .range([height, 0]);
+            var margin = { top: 20, right: 30, bottom: 40, left: 90 },
+                width = 460 - margin.left - margin.right,
+                height = 400 - margin.top - margin.bottom;
 
             // append the svg object to the body of the page
-            // append a 'group' element to 'svg'
-            // moves the 'group' element to the top left margin
-            var svg = d3.select("body").append("svg")
+            var svg = d3.select("#my_dataviz")
+                .append("svg")
                 .attr("width", width + margin.left + margin.right)
                 .attr("height", height + margin.top + margin.bottom)
                 .append("g")
                 .attr("transform",
                     "translate(" + margin.left + "," + margin.top + ")");
 
-            // get the data
-            // data = await d3.csv("value.csv");
             rawData = await d3.csv("splc-hate-groups-2019.csv");
             var data = d3.nest()
                 .key(function (d) { return d.Ideology; })
                 .rollup(function (v) { return v.length; })
                 .entries(rawData);
 
-            // d3.rollup(rawData, v => v.length, d => d.Ideology);
-
-            // format the data
-            // data.forEach(function (d) {
-            //     d.value = +d.value;
-            // });
-
-            // Scale the range of the data in the domains
-            x.domain(data.map(function (d) { return d.key; }));
-            y.domain([0, d3.max(data, function (d) { return d.value; })]);
-
-            // append the rectangles for the bar chart
-            svg.selectAll(".bar")
-                .data(data)
-                .enter().append("rect")
-                .attr("class", "bar")
-                .attr("x", function (d) { return x(d.key); })
-                .attr("width", x.bandwidth())
-                .attr("y", function (d) { return y(d.value); })
-                .attr("height", function (d) { return height - y(d.value); });
-
-            // add the x Axis
+            //sort bars based on value
+            data = data.sort(function (a, b) {
+                return d3.descending(a.value, b.value);
+            });
+            
+            // Add X axis
+            var x = d3.scaleLinear()
+                .domain([0, d3.max(data, function (d) { return d.value; })])
+                .range([0, width]);
             svg.append("g")
                 .attr("transform", "translate(0," + height + ")")
-                .call(d3.axisBottom(x));
+                .call(d3.axisBottom(x))
+                .selectAll("text")
+                .attr("transform", "translate(-10,0)rotate(-45)")
+                .style("text-anchor", "end");
 
-            // add the y Axis
+            // Y axis
+            var y = d3.scaleBand()
+                .range([0, height])
+                .domain(data.map(function (d) {
+                    return d.key
+                }))
+                .padding(.1);
             svg.append("g")
-                .call(d3.axisLeft(y));
+                .call(d3.axisLeft(y))
 
+            //Bars
+            svg.selectAll("myRect")
+                .data(data)
+                .enter()
+                .append("rect")
+                .attr("x", x(0))
+                .attr("y", function (d) { return y(d.key); })
+                .attr("width", function (d) { return x(d.value); })
+                .attr("height", y.bandwidth())
+                .attr("fill", "#69b3a2")
         }
     </script>
 </body>
