--- a/index.html
+++ b/index.html
@@ -1,72 +1,111 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<style>
+    /* set the CSS */
+    body {
+        font: 12px Arial;
+    }
 
-<body onload='init()'>
+    div.tooltip {
+        position: absolute;
+        text-align: center;
+        width: 60px;
+        height: 28px;
+        padding: 2px;
+        font: 12px sans-serif;
+        background: lightsteelblue;
+        border: 0px;
+        border-radius: 8px;
+        pointer-events: none;
+    }
+</style>
 
-    <!-- Load d3.js -->
-    <script src="https://d3js.org/d3.v5.js"></script>
+<body>
 
-    <!-- Create a div where the graph will take place -->
-    <div id="my_dataviz"></div>
-    <script>
+    <body onload='init()'>
 
-        async function init() {
-            // set the dimensions and margins of the graph
-            var margin = { top: 20, right: 30, bottom: 40, left: 90 },
-                width = 460 - margin.left - margin.right,
-                height = 400 - margin.top - margin.bottom;
+        <!-- Load d3.js -->
+        <script src="https://d3js.org/d3.v5.js"></script>
 
-            // append the svg object to the body of the page
-            var svg = d3.select("#my_dataviz")
-                .append("svg")
-                .attr("width", width + margin.left + margin.right)
-                .attr("height", height + margin.top + margin.bottom)
-                .append("g")
-                .attr("transform",
-                    "translate(" + margin.left + "," + margin.top + ")");
+        <!-- Create a div where the graph will take place -->
+        <div id="my_dataviz"></div>
+        <script>
 
-            rawData = await d3.csv("splc-hate-groups-2019.csv");
-            var data = d3.nest()
-                .key(function (d) { return d.Ideology; })
-                .rollup(function (v) { return v.length; })
-                .entries(rawData);
+            async function init() {
+                // set the dimensions and margins of the graph
+                var margin = { top: 20, right: 30, bottom: 40, left: 90 },
+                    width = 460 - margin.left - margin.right,
+                    height = 400 - margin.top - margin.bottom;
 
-            //sort bars based on value
-            data = data.sort(function (a, b) {
-                return d3.descending(a.value, b.value);
-            });
-            
-            // Add X axis
-            var x = d3.scaleLinear()
-                .domain([0, d3.max(data, function (d) { return d.value; })])
-                .range([0, width]);
-            svg.append("g")
-                .attr("transform", "translate(0," + height + ")")
-                .call(d3.axisBottom(x))
-                .selectAll("text")
-                .attr("transform", "translate(-10,0)rotate(-45)")
-                .style("text-anchor", "end");
+                // Define the div for the tooltip
+                var div = d3.select("body").append("div")
+                    .attr("class", "tooltip")
+                    .style("opacity", 0);
 
-            // Y axis
-            var y = d3.scaleBand()
-                .range([0, height])
-                .domain(data.map(function (d) {
-                    return d.key
-                }))
-                .padding(.1);
-            svg.append("g")
-                .call(d3.axisLeft(y))
+                // append the svg object to the body of the page
+                var svg = d3.select("#my_dataviz")
+                    .append("svg")
+                    .attr("width", width + margin.left + margin.right)
+                    .attr("height", height + margin.top + margin.bottom)
+                    .append("g")
+                    .attr("transform",
+                        "translate(" + margin.left + "," + margin.top + ")");
 
-            //Bars
-            svg.selectAll("myRect")
-                .data(data)
-                .enter()
-                .append("rect")
-                .attr("x", x(0))
-                .attr("y", function (d) { return y(d.key); })
-                .attr("width", function (d) { return x(d.value); })
-                .attr("height", y.bandwidth())
-                .attr("fill", "#69b3a2")
-        }
-    </script>
-</body>
+                rawData = await d3.csv("splc-hate-groups-2019.csv");
+                var data = d3.nest()
+                    .key(function (d) { return d.Ideology; })
+                    .rollup(function (v) { return v.length; })
+                    .entries(rawData);
+
+                //sort bars based on value
+                data = data.sort(function (a, b) {
+                    return d3.descending(a.value, b.value);
+                });
+
+                // Add X axis
+                var x = d3.scaleLinear()
+                    .domain([0, d3.max(data, function (d) { return d.value; })])
+                    .range([0, width]);
+                svg.append("g")
+                    .attr("transform", "translate(0," + height + ")")
+                    .call(d3.axisBottom(x))
+                    .selectAll("text")
+                    .attr("transform", "translate(-10,0)rotate(-45)")
+                    .style("text-anchor", "end");
+
+                // Y axis
+                var y = d3.scaleBand()
+                    .range([0, height])
+                    .domain(data.map(function (d) {
+                        return d.key
+                    }))
+                    .padding(.1);
+                svg.append("g")
+                    .call(d3.axisLeft(y))
+
+                //Bars
+                svg.selectAll("myRect")
+                    .data(data)
+                    .enter()
+                    .append("rect")
+                    .attr("x", x(0))
+                    .attr("y", function (d) { return y(d.key); })
+                    .attr("width", function (d) { return x(d.value); })
+                    .attr("height", y.bandwidth())
+                    .attr("fill", "#69b3a2")
+                    .on("mouseover", function (d) {
+                        div.transition()
+                            .duration(200)
+                            .style("opacity", .9);
+                        div.html(d.key)
+                            .style("left", (d3.event.pageX) + "px")
+                            .style("top", (d3.event.pageY - 28) + "px");
+                    })
+                    .on("mouseout", function (d) {
+                        div.transition()
+                            .duration(500)
+                            .style("opacity", 0);
+                    });
+            }
+        </script>
+    </body>
