--- a/index.html
+++ b/index.html
@@ -20,139 +20,143 @@
     }
 </style>
 
-<body>
+<head>
+    <title>Page Title</title>
+    <h1>Page Title</h1>
+    <p>This is a paragraph.</p>
+</head>
 
-    <body onload='init()'>
+<body onload='init()'>
 
-        <!-- Load d3.js -->
-        <script src="https://d3js.org/d3.v5.js"></script>
+    <!-- Load d3.js -->
+    <script src="https://d3js.org/d3.v5.js"></script>
 
-        <div id="next">
-            <input id="prevButton" type="button" value="" onclick="updateData(-1)" />
+    <div id="next">
+        <input id="prevButton" type="button" value="" onclick="updateData(-1)" />
 
-            <input id="nextButton" type="button" value="" onclick="updateData(1)" />
-        </div>
+        <input id="nextButton" type="button" value="" onclick="updateData(1)" />
+    </div>
 
-        <!-- Create a div where the graph will take place -->
-        <div id="dataviz"></div>
+    <!-- Create a div where the graph will take place -->
+    <div id="dataviz"></div>
 
-        <script>
+    <script>
 
-            var svg;
-            var div;
+        var svg;
+        var div;
 
-            var dataByYear = {};
-            const DS = "ds";
+        var dataByYear = {};
+        const DS = "ds";
 
-            var curYear = 2010;
+        var curYear = 2010;
 
-            // set the dimensions and margins of the graph
-            var margin = { top: 20, right: 30, bottom: 40, left: 90 },
-                width = 460 - margin.left - margin.right,
-                height = 400 - margin.top - margin.bottom;
+        // set the dimensions and margins of the graph
+        var margin = { top: 20, right: 30, bottom: 40, left: 90 },
+            width = 460 - margin.left - margin.right,
+            height = 800 - margin.top - margin.bottom;
 
 
-            function updateData(offset) {
-                // clean previous content
-                svg.selectAll("*").remove();
+        function updateData(offset) {
+            // clean previous content
+            svg.selectAll("*").remove();
 
-                curYear += offset;
+            curYear += offset;
 
-                document.getElementById('prevButton').value = (curYear - 1) + "<";
-                document.getElementById('nextButton').value = ">" + (curYear + 1);
+            document.getElementById('prevButton').value = (curYear - 1) + "<";
+            document.getElementById('nextButton').value = ">" + (curYear + 1);
 
-                var data = dataByYear[curYear][DS];
+            var data = dataByYear[curYear][DS];
 
-                // Add X axis
-                var x = d3.scaleLinear()
-                    .domain([0, d3.max(data, function (d) { return d.value; })])
-                    .range([0, width]);
-                svg.append("g")
-                    .attr("transform", "translate(0," + height + ")")
-                    .call(d3.axisBottom(x))
-                    .selectAll("text")
-                    .attr("transform", "translate(-10,0)rotate(-45)")
-                    .style("text-anchor", "end");
+            // Add X axis
+            var x = d3.scaleLinear()
+                .domain([0, d3.max(data, function (d) { return d.value; })])
+                .range([0, width]);
+            svg.append("g")
+                .attr("transform", "translate(0," + height + ")")
+                .call(d3.axisBottom(x))
+                .selectAll("text")
+                .attr("transform", "translate(-10,0)rotate(-45)")
+                .style("text-anchor", "end");
 
-                // Y axis
-                var y = d3.scaleBand()
-                    .range([0, height])
-                    .domain(data.map(function (d) {
-                        return d.key
-                    }))
-                    .padding(.1);
-                svg.append("g")
-                    .call(d3.axisLeft(y))
+            // Y axis
+            var y = d3.scaleBand()
+                .range([0, height])
+                .domain(data.map(function (d) {
+                    return d.key
+                }))
+                .padding(.1);
+            svg.append("g")
+                .call(d3.axisLeft(y))
 
-                //Bars
-                svg.selectAll("myRect")
-                    .data(data)
-                    .enter()
-                    .append("rect")
-                    .attr("x", x(0))
-                    .attr("y", function (d) { return y(d.key); })
-                    .attr("height", y.bandwidth())
-                    .attr("fill", "#69b3a2")
-                    .on("mouseover", function (d) {
-                        div.transition()
-                            .duration(200)
-                            .style("opacity", .9);
-                        div.html(d.key)
-                            .style("left", (d3.event.pageX) + "px")
-                            .style("top", (d3.event.pageY - 28) + "px");
-                    })
-                    .on("mouseout", function (d) {
-                        div.transition()
-                            .duration(500)
-                            .style("opacity", 0);
-                    })
-                    .attr("width", 0)
-                    .transition().duration(3000)
-                    .attr("width", function (d) { return x(d.value); })
-                    ;
+            //Bars
+            svg.selectAll("myRect")
+                .data(data)
+                .enter()
+                .append("rect")
+                .attr("x", x(0))
+                .attr("y", function (d) { return y(d.key); })
+                .attr("height", y.bandwidth())
+                .attr("fill", "#69b3a2")
+                .on("mouseover", function (d) {
+                    div.transition()
+                        .duration(200)
+                        .style("opacity", .9);
+                    div.html(d.key)
+                        .style("left", (d3.event.pageX) + "px")
+                        .style("top", (d3.event.pageY - 28) + "px");
+                })
+                .on("mouseout", function (d) {
+                    div.transition()
+                        .duration(500)
+                        .style("opacity", 0);
+                })
+                .attr("width", 0)
+                .transition().duration(3000)
+                .attr("width", function (d) { return x(d.value); })
+                ;
+        }
+
+        function processData(year, rawData) {
+            data = d3.nest()
+                .key(function (d) { return d.State; })
+                .rollup(function (v) { return v.length; })
+                .entries(rawData);
+
+            //sort bars based on value
+            data = data.sort(function (a, b) {
+                return d3.descending(a.value, b.value);
+            });
+
+            if (dataByYear[year] == null) {
+                dataByYear[year] = {};
+            }
+            dataByYear[year][DS] = data;
+        }
+
+        async function init() {
+            // Define the div for the tooltip
+            div = d3.select("body").append("div")
+                .attr("class", "tooltip")
+                .style("opacity", 0);
+
+            // append the svg object to the body of the page
+            svg = d3.select("#dataviz")
+                .append("svg")
+                .attr("width", width + margin.left + margin.right)
+                .attr("height", height + margin.top + margin.bottom)
+                .append("g")
+                .attr("transform",
+                    "translate(" + margin.left + "," + margin.top + ")");
+
+            // read and process all the years and create appropriate
+            // data structures for further usage
+
+            for (year = 2010; year <= 2019; year++) {
+                rawData = await d3.csv("data/splc-hate-groups-" + year + ".csv");
+                processData(year, rawData);
             }
 
-            function processData(year, rawData) {
-                data = d3.nest()
-                    .key(function (d) { return d.Ideology; })
-                    .rollup(function (v) { return v.length; })
-                    .entries(rawData);
-
-                //sort bars based on value
-                data = data.sort(function (a, b) {
-                    return d3.descending(a.value, b.value);
-                });
-
-                if (dataByYear[year] == null) {
-                    dataByYear[year] = {};
-                }
-                dataByYear[year][DS] = data;
-            }
-
-            async function init() {
-                // Define the div for the tooltip
-                div = d3.select("body").append("div")
-                    .attr("class", "tooltip")
-                    .style("opacity", 0);
-
-                // append the svg object to the body of the page
-                svg = d3.select("#dataviz")
-                    .append("svg")
-                    .attr("width", width + margin.left + margin.right)
-                    .attr("height", height + margin.top + margin.bottom)
-                    .append("g")
-                    .attr("transform",
-                        "translate(" + margin.left + "," + margin.top + ")");
-
-                // read and process all the years and create appropriate
-                // data structures for further usage
-
-                for (year = 2010; year <= 2019; year++) {
-                    rawData = await d3.csv("data/splc-hate-groups-" + year + ".csv");
-                    processData(year, rawData);
-                }
-
-                updateData(0);
-            }
-        </script>
-    </body>
+            updateData(0);
+        }
+    </script>
+</body>
