--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     div.tooltip {
         position: absolute;
         text-align: center;
-        width: 60px;
+        width: 150px;
         height: 28px;
         padding: 2px;
         font: 12px sans-serif;
@@ -47,6 +47,7 @@
 
         var dataByYear = {};
         const DS = "ds";
+        const TOOLTIP = "tooltip";
 
         var curYear = 2010;
 
@@ -101,7 +102,7 @@
                     div.transition()
                         .duration(200)
                         .style("opacity", .9);
-                    div.html(d.key)
+                    div.html(dataByYear[curYear][TOOLTIP][d.key])
                         .style("left", (d3.event.pageX) + "px")
                         .style("top", (d3.event.pageY - 28) + "px");
                 })
@@ -117,20 +118,44 @@
         }
 
         function processData(year, rawData) {
-            data = d3.nest()
+            var ds = d3.nest()
                 .key(function (d) { return d.State; })
                 .rollup(function (v) { return v.length; })
                 .entries(rawData);
 
             //sort bars based on value
-            data = data.sort(function (a, b) {
+            ds = ds.sort(function (a, b) {
                 return d3.descending(a.value, b.value);
             });
 
             if (dataByYear[year] == null) {
                 dataByYear[year] = {};
             }
-            dataByYear[year][DS] = data;
+            dataByYear[year][DS] = ds;
+
+            var byStateByIdeology = d3.nest()
+                .key(function (d) { return d.State; })
+                .key(function (d) { return d.Ideology; })
+                .rollup(function (v) { return v.length; })
+                .entries(rawData);
+
+            var tooltip = {};
+            byStateByIdeology.forEach((byIdeology) => {
+                var t = "";
+
+                ideologies = byIdeology.values;
+                ideologies = ideologies.sort(function (a, b) {
+                    return d3.descending(a.value, b.value);
+                });
+
+                ideologies.forEach((ideology) => {
+                    t += ideology.key + ": " + ideology.value + "<br/>";
+                });
+
+                tooltip[byIdeology.key] = t;
+            });
+
+            dataByYear[year][TOOLTIP] = tooltip;
         }
 
         async function init() {
