--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <!-- Load d3.js -->
     <script src="https://d3js.org/d3.v5.js"></script>
 
-    <div id="next">
+    <div id="control">
         <input id="prevButton" type="button" value="" onclick="updateData(-1)" />
-
         <input id="nextButton" type="button" value="" onclick="updateData(1)" />
     </div>
 
@@ -89,6 +88,15 @@
             }
 
             var data = dataByYear[curYear][DS];
+
+            // Add title
+            svg.append("text")
+                .attr("x", (width / 2))
+                .attr("y", 0 - ((margin.top -10) / 2))
+                .attr("text-anchor", "middle")
+                .style("font-size", "16px")
+                .style("text-decoration", "underline")
+                .text("States by Hate Groups Number in " + curYear);
 
             // Add X axis
             var x = d3.scaleLinear()
