--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         border-radius: 8px;
         pointer-events: none;
     }
+
+    svg text.label {
+        fill: white;
+        font: 15px;
+        font-weight: 400;
+        text-anchor: middle;
+    }
 </style>
 
 <head>
@@ -180,8 +187,18 @@
                 .attr("width", function (d) { return x((prevData[d.key] == null) ? 0 : prevData[d.key]); })
                 // .attr("width", 0)
                 .transition().duration(5000)
-                .attr("width", function (d) { return x(d.value); })
-                ;
+                .attr("width", function (d) { return x(d.value); });
+
+            // Controls the text labels at the right of each bar
+            svg.selectAll(".text")
+                .data(data)
+                .enter()
+                .append("text")
+                .attr("class", "label")
+                .attr("y", (function (d) { return y(d.key) + 10 ; }))
+                .attr("x", function (d) { return x(d.value) - 20; })
+                .attr("dx", ".75em")
+                .text(function (d) { return d.value; });
         }
 
         function processData(year, rawData) {
