Adding basic annotations

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         font-weight: 400;
         text-anchor: middle;
     }
+
+    svg text.annotation {
+        fill: red;
+        font: 15px;
+        font-weight: 400;
+        text-anchor: middle;
+    }
 </style>
 
 <head>
@@ -97,7 +104,7 @@
             }
 
             // Calculate annotations
-            var annotated = {};
+            var annotated = [];
             var topAnnotated = 3;
             var bootomAnnotated = topAnnotated;
 
@@ -108,7 +115,7 @@
                 });
 
                 for (i = 0; i < topAnnotated; i++) {
-                    annotated[jump[i].state] = jump[i].value;
+                    annotated.push({ key: jump[i].state, value: jump[i].value });
                 }
             }
 
@@ -124,7 +131,7 @@
                 .attr("text-anchor", "middle")
                 .style("font-size", "16px")
                 .style("text-decoration", "underline")
-                .text("States by Hate Groups Number in " + curYear);
+                .text("States by Number of Hate Groups in " + curYear);
 
             // Add X axis
             var prevMax = 0;
@@ -148,16 +155,7 @@
             // Y axis
             var y = d3.scaleBand()
                 .range([0, height])
-                .domain(data.map(function (d) {
-                    var label = d.key;
-
-                    // var j = annotated[label];
-                    // if (j != null) {
-                    //     label = "(+" + j + ")" + label;
-                    // }
-
-                    return label;
-                }))
+                .domain(data.map(function (d) { return d.key }))
                 .padding(.1);
             svg.append("g")
                 .call(d3.axisLeft(y))
@@ -195,10 +193,27 @@
                 .enter()
                 .append("text")
                 .attr("class", "label")
-                .attr("y", (function (d) { return y(d.key) + 10 ; }))
+                .attr("y", (function (d) { return y(d.key) + 10; }))
                 .attr("x", function (d) { return x(d.value) - 20; })
                 .attr("dx", ".75em")
                 .text(function (d) { return d.value; });
+
+            // Controls the text annotations at the right of each bar
+
+            var mapData = data.reduce(function (map, obj) {
+                map[obj.key] = obj.value;
+                return map;
+            }, {});
+
+            svg.selectAll(".annotation")
+                .data(annotated)
+                .enter()
+                .append("text")
+                .attr("class", "annotation")
+                .attr("y", (function (d) { return y(d.key) + 10; }))
+                .attr("x", function (d) { return x(mapData[d.key]) + 20; })
+                .attr("dx", ".75em")
+                .text(function (d) { return "+" + d.value; });
         }
 
         function processData(year, rawData) {
