A few fixes in the narration

--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@
                     Because I was not a trade unionist.<br />
                     Then they came for the Jews, and I did not speak out—<br />
                     Because I was not a Jew.<br />
-                    Then they came for me—and there was no one left to speak for me."</i></br>Martin Niemöller</br></br>
+                    Then they came for me—and there was no one left to speak for me."</i></br>
+                    <a href="https://en.wikipedia.org/wiki/First_they_came_...">Martin Niemöller</a> 
+                </br></br>
 
                 Massive protests sparked in the US and around the world in the end of spring, beginning of summer 2020.
-                Those came in response to the killing of a black American man George Floyd by a police officer. For many
+                Those came in response to the killing of a black American man 
+                <a href="https://en.wikipedia.org/wiki/George_Floyd">George Floyd</a> 
+                by a police officer. For many
                 Americans and people around the globe this again raised deep concerns around the structured racism and
                 racial
                 injustice in countries and societies. Law enforcement forces are not detached from the communities they
@@ -83,13 +87,17 @@
                 we wanted to explore the trend of the extremism in the US and its spread and dynamics across different
                 states.</br /></br />
 
-                We prepared our interactive exploration based on the publicly available data from SPLC. SPLC is one of
-                the two private NPOs
-                monitoring intolerance and hate groups (The other is ADL). <i>"A hate group is a social group that
+                We prepared our interactive exploration based on the publicly available data from 
+                <a href="https://www.splcenter.org">SPLC</a>. The latter is one of
+                the two private NPOs in the US
+                monitoring intolerance and hate groups (The other one is 
+                <a href="https://www.adl.org/">ADL</a>). <i>"A hate group is a social group that
                     advocates and practices hatred, hostility, or violence towards members of a race, ethnicity, nation,
                     religion, gender, gender identity, sexual orientation or any other designated sector of society"</i>
                 (Wikipedia).
-                We've found that 75 years after Nuremberg tribunal, a few decades after Civil Rights Movement started
+                We've found that 75 years after 
+                <a href="https://en.wikipedia.org/wiki/Nuremberg_trials">Nuremberg trials</a>, a few decades after 
+                <a href="https://en.wikipedia.org/wiki/Civil_rights_movement">Civil Rights Movement</a> started,
                 the history lessons have not been
                 learned: the most extremist hate groups publicly operate across the US and no positive trend has been
                 observed over the last decade.</br /></br />
